<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MessageFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context=".MessageFragment">

    <TextView
        android:id="@+id/msgAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_author"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msgTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_timestamp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/msgAuthor"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/msgContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text="@string/msg_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msgAuthor" />

</androidx.constraintlayout.widget.ConstraintLayout>