<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageViewerActivity">

    <ScrollView
        android:id="@+id/messageScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/messageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_title"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/messageAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_author"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/messageReactionCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_reactionCount" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="@+id/messageScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/messageScrollView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerReactions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageScrollView"
        tools:itemCount="9"
        tools:listitem="@layout/fragment_reaction" />

</androidx.constraintlayout.widget.ConstraintLayout>