<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PostViewer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostViewerActivity">

    <ScrollView
        android:id="@+id/postScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/postTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_title"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/postAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_author"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/postMsgCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_msgCount" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="@+id/postScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/postScrollView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerReplies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postScrollView"
        tools:listitem="@layout/fragment_message"
        tools:itemCount="10" />

</androidx.constraintlayout.widget.ConstraintLayout>